playgroundv2/helmfile/platform/envoy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-projectcatalyst-tls
      hostname: "*.projectcatalyst.dev"
    - name: buildkit-tcp
      protocol: TCP
      port: 8372
      allowedRoutes:
        namespaces:
          from: All
