playgroundv2/helmfile/platform/envoy/buildkitd-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: buildkitd
  namespace: registry
spec:
  parentRefs:
    - name: default
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: earthly-buildkitd
          port: 8372
