playgroundv2/helmfile/platform/envoy/kratos-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kratos
  namespace: auth
spec:
  parentRefs:
    - name: default
      namespace: envoy-gateway-system
  hostnames:
    - auth.projectcatalyst.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kratos/public
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: kratos-public
          namespace: auth
          port: 80
