playgroundv2/helmfile/platform/envoy/mailpit-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mailpit
  namespace: mailpit
spec:
  parentRefs:
    - name: default
      namespace: envoy-gateway-system
  hostnames:
    - mailpit.projectcatalyst.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: http
          port: 80
