playgroundv2/helmfile/platform/envoy/mock-oidc-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mock-oidc
  namespace: mock-oidc
spec:
  parentRefs:
    - name: default
      namespace: envoy-gateway-system
  hostnames:
    - auth-mock.projectcatalyst.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mock-oidc
          namespace: mock-oidc
          port: 80
