playgroundv2/helmfile/platform/envoy/postgres-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: postgres
  namespace: postgres
spec:
  parentRefs:
    - name: default
      namespace: envoy-gateway-system
      sectionName: postgres-tcp
  rules:
    - backendRefs:
        - name: postgres-postgresql
          port: 5432
