playgroundv2/helmfile/platform/envoy/registry-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry
  namespace: registry
spec:
  parentRefs:
    - name: default
      namespace: envoy-gateway-system
  hostnames:
    - registry.projectcatalyst.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: registry-docker-registry
          port: 5000
