playgroundv2/helmfile/platform/envoy/temporal-ui-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: temporal-ui
  namespace: temporal
spec:
  parentRefs:
    - name: default
      namespace: envoy-gateway-system
  hostnames:
    - temporal.projectcatalyst.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: temporal-web
          namespace: temporal
          port: 8080
